<resources>
    <string name="app_name">Simple Note App</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="notesLowerCase">notes</string>


    <!--Shared Preferences Values-->
    <string name="layout_manager_key">grid_or_linear</string>
    <string name="preview">Preview</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_archived">Note archived</string>
    <string name="undo">UNDO</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for notes...</string>
    <string name="delete_all">Delete all</string>
    <string name="select_all_text">Select all text</string>
    <string name="copy_all_text">Copy all text</string>
    <string name="paste_copied_text">Paste copied text</string>
    <string name="undo_changes">Undo changes</string>
    <string name="redo_changes">Redo changes</string>
    <string name="delete_all_text">Delete all text</string>
    <string name="change_font_style">Change font style</string>
    <string name="change_text_color">Change text color</string>
    <string name="change_note_color">Change note color</string>
    <string name="italic">Italic</string>
    <string name="serif">Serif</string>
    <string name="default_font">Default</string>
    <string name="monospace">Monospace</string>
    <string name="sans_serif">Sans serif</string>
    <string name="bold_italic">Bold italic</string>
    <string name="colors">Colors</string>
    <string name="fonts">Fonts</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    <string name="white">white</string>
    <string name="black">black</string>
    <string name="blue_grey">blue grey</string>
    <string name="brown">brown</string>
    <string name="indigo">indigo</string>
    <string name="pink">pink</string>
    <string name="purple">purple</string>
    <string name="teal">teal</string>
    <string name="note_color">Note color</string>
    <string name="font_color">Font color</string>
    <string name="copied">copied</string>
    <string name="grid">Grid</string>
    <string name="linear">Linear</string>
    <string name="max_note_size_toast">Max characters of note is</string>
    <string name="search_for_notes">Search for notes</string>
    <string name="archives">Archives</string>
    <string name="note_title">Note title</string>
    <string name="delete_this_note">Delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restore_this_note">Restore this note?</string>
    <string name="empty">Empty</string>
    <string name="exit_toast">One more time to exit</string>
    <string name="delete">Delete</string>
    <string name="items_selected">items selected</string>
    <string name="delete_selected">Delete selected</string>
    <string name="restore_selected">Restore selected</string>
    <string name="restore">Restore</string>
    <string name="restoreLowerCase">restore</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_archives">Archive deleted notes</string>
    <string name="pref_description_archives">Move deleted notes to archives section</string>
    <string name="pref_key_archives">archives</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="select_all">Select all</string>
    <string name="create_a_color_label">Create a color</string>
    <string name="add_color">Add color</string>
    <string name="apply_color">Apply color</string>
    <string name="cancel_button">Cancel</string>
    <string name="apply_button">Apply</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <!--END-->
</resources>
