<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        android:hint="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/main_menu_grid"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/grid"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_menu_linear"
        android:icon="@drawable/ic_view_agenda_black_24dp"
        android:title="@string/linear"
        app:showAsAction="always" />
</menu>