<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_note_fragment_root_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/edit_mode_bar_hor_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/cardview_light_background"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/select_all"

                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="@string/select_all_text"
                    android:focusable="true"
                    android:minWidth="70dp"
                    android:src="@drawable/ic_select_all_black_24dp" />

                <ImageButton
                    android:id="@+id/copy_all"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/copy_all_text"
                    android:minWidth="70dp"
                    android:src="@drawable/ic_content_copy_black_24dp" />

                <ImageButton
                    android:id="@+id/paste"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/paste_copied_text"
                    android:minWidth="70dp"
                    android:src="@drawable/ic_content_paste_black_24dp" />

                <!--<ImageButton-->
                <!--android:id="@+id/font_style"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="?attr/actionBarSize"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:contentDescription="@string/change_font_style"-->
                <!--android:minWidth="70dp"-->
                <!--android:src="@drawable/ic_font_download_black_24dp" />-->

                <ImageButton
                    android:id="@+id/text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/change_text_color"
                    android:minWidth="70dp"
                    android:src="@drawable/ic_format_color_text_black_24dp" />

                <ImageButton
                    android:id="@+id/note_color"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/change_note_color"
                    android:minWidth="70dp"
                    android:src="@drawable/ic_brush_black_24dp" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/characters_counter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="0/..."
            android:textColor="@color/material_blue_grey" />

        <android.support.v7.widget.CardView
            android:id="@+id/create_note_parent_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/create_note_title_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/title"
                            android:maxLength="500"
                            android:padding="8dp"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/create_note_note_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|start"
                            android:hint="@string/note"
                            android:maxLength="5000"
                            android:padding="6dp"
                            android:textAlignment="gravity"
                            android:textSize="18sp"
                            app:met_maxCharacters="1000" />

                    </LinearLayout>


                </ScrollView>

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/create_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_done_white_24dp"
                app:fabSize="normal" />

        </android.support.v7.widget.CardView>

    </LinearLayout>



</layout>
